--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=password
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 server.servlet.context-path=/comiccity
 
+# application.properties
+spring.profiles.active=development
+server.port=8080
